--- a/meditrek/package.json
+++ b/meditrek/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hospitalsystem",
+  "proxy":"https://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.4.0",
+    "axios": "^1.3.5",
     "bootstrap": "^4.6.2",
     "date-fns": "^2.29.3",
     "moment": "^2.29.4",
