--- a/meditrek/package.json
+++ b/meditrek/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hospitalsystem",
-  "proxy":"https://localhost:8080",
+  "proxy":"http://localhost:8080",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
