--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client":"npm start --prefix ./meditrex",
-    "dev":" concurrently \" npm run server \" \"npm run client\""
+    "client":"npm start --prefix ./meditrek",
+    "dev":"concurrently \" npm run server \" \"npm run client\""
   },
   "keywords": [],
   "author": "",
