--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 8080
 NODE_MODE = development
 
-MONGODB_URL =
-JWT_SECRET=
+MONGODB_URL =mongodb+srv://dbUser:DJt7n74D$sBg$LX@cluster0.cfuuv.mongodb.net/doctorapp
+
+JWT_SECRET=XYZGHSJ123
