--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 8080
 NODE_MODE = development
 
-MONGODB_URL =mongodb+srv://dbUser:DJt7n74D$sBg$LX@cluster0.cfuuv.mongodb.net/doctorapp
+MONGODB_URL =
+JWT_SECRET=
 
-JWT_SECRET=XYZGHSJ123
